--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
+    "browser-image-compression": "^2.0.2",
     "lottie-react": "^2.4.1",
     "next": "16.0.0",
     "react": "19.2.0",
