--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "browser-image-compression": "^2.0.2",
     "lottie-react": "^2.4.1",
-    "next": "16.0.0",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
